# openMVG

./: .gitignore  appveyor.yml
src/openMVG/cameras/: CMakeLists.txt  Camera_IO.cpp  Camera_IO.hpp  Camera_Intrinsics.cpp  Camera_Intrinsics.hpp  Camera_Pinhole.cpp  Camera_Pinhole.hpp  Camera_Pinhole_Brown.cpp  Camera_Pinhole_Brown.hpp  Camera_Pinhole_Fisheye.cpp  Camera_Pinhole_Fisheye.hpp  Camera_Pinhole_Radial.cpp  Camera_Pinhole_Radial.hpp  Cameras_Common_command_line_helper.cpp  Cameras_Common_command_line_helper.hpp  PinholeCamera.cpp  PinholeCamera.hpp
src/openMVG/geometry/: AABB.cpp  AABB.hpp  AABB_test.cpp  CMakeLists.txt  Similarity3.cpp  Similarity3.hpp  Similarity3_Kernel.cpp  Similarity3_Kernel.hpp  box.cpp  box.hpp  frustum.cpp  frustum.hpp  half_space_intersection.cpp  half_space_intersection.hpp  octree.cpp  octree.hpp  pose3.cpp  pose3.hpp  rigid_transformation3D_srt.cpp  rigid_transformation3D_srt.hpp
src/openMVG/image/: CMakeLists.txt  image_container.hpp  image_convolution.hpp  image_convolution_base.hpp  image_filtering.hpp  image_resampling.hpp  pixel_types_io_cereal.hpp  sample.hpp
src/openMVG/image/gpu/: CMakeLists.txt  image_gpu_arithmetics.cpp  image_gpu_arithmetics.hpp  image_gpu_convolution.cpp  image_gpu_convolution.hpp  image_gpu_filtering.cpp  image_gpu_filtering.hpp  image_gpu_interface.cpp  image_gpu_interface.hpp  image_gpu_interface_test.cpp  image_gpu_local_maxima.cpp  image_gpu_local_maxima.hpp  image_gpu_resampling.cpp  image_gpu_resampling.hpp
src/openMVG/system/gpu/: CMakeLists.txt  OpenCLContext.cpp  OpenCLContext.hpp  OpenCLDeviceInfos.hpp  OpenCLStandardKernels.cpp  OpenCLStandardKernels.hpp
src/openMVG_Samples/features_spectral_sift/: CMakeLists.txt  build_eigenimages.cpp  gen_eigenimages.cpp  spectral_sift_sample.cpp
src/software/MVS/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CostMetricFunctors.cpp  CostMetricFunctors.hpp  DepthMap.cpp  DepthMap.hpp  DepthMapComputationCPU.cpp  DepthMapComputationCPU.hpp  DepthMapComputationCommon.cpp  DepthMapComputationCommon.hpp  DepthMapComputationOpenCL.cpp  DepthMapComputationOpenCL.hpp  DepthMapComputationParameters.cpp  DepthMapComputationParameters.hpp  DepthMapFusionParameters.cpp  DepthMapFusionParameters.hpp  Generators.cpp  Generators.hpp  HypothesisSampler.cpp  HypothesisSampler.hpp  Image.cpp  Image.hpp  JointViewSelection.hpp  MatchingCost.cpp  MatchingCost.hpp  OpenCLUtils.cpp  OpenCLUtils.hpp  OpenCLWrapper.cpp  OpenCLWrapper.hpp  PointCloud.cpp  PointCloud.hpp  PutativePoint.cpp  PutativePoint.hpp  Util.cpp  Util.hpp  main_computeDepthMaps.cpp  main_fusionDepthMaps.cpp  (+4 more)
src/software/MVS/normal_estimation/: AbstractNormalEstimation.hpp  HoppeNormalEstimation.cpp  HoppeNormalEstimation.hpp
src/software/OpenMVG-GUI/: ApplicationSettings.cc  ApplicationSettings.hh  ApplicationState.hh  AutomaticReconstructionDialog.cc  AutomaticReconstructionDialog.hh  CMakeLists.txt  CMakeLists.txt__  ConsoleWidget.cc  ConsoleWidget.hh  DetailListWidget.cc  DetailListWidget.hh  DoubleProgressBarDialog.cc  DoubleProgressBarDialog.hh  FeaturesViewerWidget.cc  FeaturesViewerWidget.hh  ImageListWidget.cc  ImageListWidget.hh  MainWindow.cc  MainWindow.hh  MaskDefinitionDialog.cc  MaskDefinitionDialog.hh  MaskView.cc  MaskView.hh  NewProjectDialog.cc  NewProjectDialog.hh  OpenMVGImageInterface.cc  OpenMVGImageInterface.hh  Project.cc  Project.hh  ProjectPaths.cc  ProjectPaths.hh  ReconstructionSummaryWidget.cc  ReconstructionSummaryWidget.hh  ResultViewWidget.cc  ResultViewWidget.hh  TODO  Version.cc  Version.hh  application.rc  main.cc  (+1 more)
src/software/OpenMVG-GUI/dialogs/: AddSensorEntryDialog.cc  AddSensorEntryDialog.hh  ApplicationSettingsDialog.cc  ApplicationSettingsDialog.hh  AutomaticReconstructionDialog.cc  AutomaticReconstructionDialog.hh  CMakeLists.txt  ClusterComputationSettingsDialog.cc  ClusterComputationSettingsDialog.hh  ColorIndicatorWidget.cc  ColorIndicatorWidget.hh  DoubleProgressBarDialog.cc  DoubleProgressBarDialog.hh  FeaturesViewerWidget.cc  FeaturesViewerWidget.hh  MaskDefinitionDialog.cc  MaskDefinitionDialog.hh  MaskView.cc  MaskView.hh  NewProjectDialog.cc  NewProjectDialog.hh  SensorDatabaseDialog.cc  SensorDatabaseDialog.hh  SensorDatabaseModel.cc  SensorDatabaseModel.hh  ZoomableGraphicsView.cc  ZoomableGraphicsView.hh
src/software/OpenMVG-GUI/graphics/: AABB.cc  AABB.hh  CMakeLists.txt  Camera.cc  Camera.hh  IntersectableObject.cc  IntersectableObject.hh  Intersection.cc  Intersection.hh  Ray.cc  Ray.hh  RenderableObject.cc  RenderableObject.hh  SceneHierarchy.cc  SceneHierarchy.hh  SceneManager.cc  SceneManager.hh  SelectableObject.cc  SelectableObject.hh  Shader.cc  Shader.hh  ShaderProgram.cc  ShaderProgram.hh  TriStateSelectableObject.cc  TriStateSelectableObject.hh  WeightedSelectableObject.cc  WeightedSelectableObject.hh
src/software/OpenMVG-GUI/node_edition/: CMakeLists.txt
src/software/OpenMVG-GUI/ressources/: Info.plist.in  point_shader.frag  point_shader.vert  ressources.qrc
src/software/OpenMVG-GUI/utils/: BellBall.cc  BellBall.hh  BoundingSphere.cc  BoundingSphere.hh  CMakeLists.txt  DownloadFile.cc  DownloadFile.hh  DownloadFileManager.cc  DownloadFileManager.hh  DualQuaternion.cc  DualQuaternion.hh  FeaturesStats.cc  FeaturesStats.hh  ImageDescriberInfo.cc  ImageDescriberInfo.hh  MatchingStats.cc  MatchingStats.hh  OpenGLContext.cc  OpenGLContext.hh  Plane.cc  Plane.hh  PlyLoader.cc  PlyLoader.hh  SfMDataHelper.cc  SfMDataHelper.hh  Sphere.cc  Sphere.hh  StdStreamHandlers.cc  StdStreamHandlers.hh  UtilFile.cc  UtilFile.hh  UtilString.cc  (+2 more)
src/software/SfMGui/: CMakeLists.txt  ImageTab.cpp  ImageTab.hpp  MainWindow.cpp  MainWindow.hpp  ProjectCreationWizard.cpp  ProjectCreationWizard.hpp  ProjectCreationWizardInputPage.cpp  ProjectCreationWizardInputPage.hpp  ProjectCreationWizardOutputPage.cpp  ProjectCreationWizardOutputPage.hpp  ProjectCreatorThread.cpp  ProjectCreatorThread.hpp  ResultTab.cpp  ResultTab.hpp  SettingTab.cpp  SettingTab.hpp  SfMProject.cpp  SfMProject.hpp  SfMSettings.cpp  SfMSettings.hpp  main.cpp
(+220 files in other folders)
